--- a/store/templates/store/item_report.html
+++ b/store/templates/store/item_report.html
@@ -92,7 +92,7 @@
                 </thead>
                 <tbody class="bg-white divide-y divide-gray-200">
                     {% for i in po %}
-                    <tr class="{% cycle 'bg-white hover:bg-cyan-50' 'bg-cyan-50 hover:bg-cyan-100' %} text-xs text-center">
+                    <tr class="{% cycle 'bg-white hover:bg-cyan-50' 'bg-cyan-50 hover:bg-cyan-100' %} text-xs text-left">
                         <td class="px-6 py-4 whitespace-nowrap  text-gray-500">{{ forloop.counter }}</td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.supply_date|date:'d-m-Y'|default_if_none:'N/A' }}<br> <small> added by: {{ i.added_by|upper }}</small></td>
                         <td class="px-3 py-4 whitespace-nowrap  text-gray-500">{{ i.category|default_if_none:'N/A'|upper }}</td>
