--- a/store/templates/store/store_list.html
+++ b/store/templates/store/store_list.html
@@ -9,7 +9,7 @@
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-3 gap-8 p-6">
             {% for store in stores %}
-            {% if store.name != "Damaged" and store.name != "Expired" and store.name != "Other" %}
+            {% if store.name != "Damaged" and store.name != "Expired" and store.name != "Other" and store.name != "Exchange"%}
             <a href="{% url 'unit_dashboard' store.pk %}" class="block">
                 <div class="bg-white rounded-lg shadow-lg hover:shadow-2xl transition duration-300 ease-in-out transform hover:-translate-y-2 hover:scale-105">
                     <div class="p-5 text-center">
